<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#253334"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:foregroundTintMode="add"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/login_bg" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="43dp"
        android:layout_height="49dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="101dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/textView3"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sans_medium"
        android:text="@string/sign_in"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/imageView2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="248dp" />

    <EditText
        android:id="@+id/siEmail"
        android:layout_width="305dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:fontFamily="@font/alegreya_regular"
        android:hint="@string/email"
        android:inputType="textEmailSubject"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/siPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="@font/alegreya_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/siEmail"
        app:layout_constraintStart_toStartOf="@+id/siEmail"
        app:layout_constraintTop_toBottomOf="@+id/siEmail"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/si_enter"
        style="@style/btn"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/alegreya_sans_medium"
        android:text="@string/sign_in"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siPassword" />

    <TextView
        android:id="@+id/si_reg"
        android:layout_width="305dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/alegreya_sans"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/register"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/si_enter"
        app:layout_constraintTop_toBottomOf="@+id/si_enter"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button2"
        style="@style/btn"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/alegreya_sans_medium"
        android:foregroundGravity="center_horizontal"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/si_reg" />
</androidx.constraintlayout.widget.ConstraintLayout>